# urfu_net_os

./: CMakeLists.txt  README.md
lr1/: README.md  lsr
lr2/: README.md  S09lr2-daemon-init.sh  daemon.c
lr3/: README.md  ipc.c
lr4/: README.md  client.c  server.c  sockets.c  soct.h
lr5/: README.md  client.c  server.c  soct.h
